<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_background"
    android:layout_marginBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_list_layout"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorTextInput"
        android:textColor="@android:color/white"
        android:hint="@string/name_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddItem"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/add_item"
            android:background="@drawable/rounded_button"
            android:onClick="addItem" />

        <Button
            android:id="@+id/buttonClearFields"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/button_clear"
            android:onClick="clearFieldsList" />
    </LinearLayout>

    <!-- Layout para adicionar os CheckBox dinamicamente -->
    <LinearLayout
        android:id="@+id/checkBoxContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
