<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/title_accommodation_layout"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_accommodation" />

            <EditText
                android:id="@+id/editTextAccomodationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/accommodation_name"
                android:src="@drawable/icon_accommodation"
                android:textColorHint="@color/colorTextInput" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_localization" />

            <EditText
                android:id="@+id/editTextAccomodationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/accommodation_adress"
                android:src="@drawable/icon_accommodation"
                android:textColorHint="@color/colorTextInput" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_calendar" />

            <EditText
                android:id="@+id/editTextCheckIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/date_check_ing"
                android:textColorHint="@color/colorTextInput" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_calendar" />

            <EditText
                android:id="@+id/editTextCheckOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/date_check_out"
                android:textColorHint="@color/colorTextInput" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/save_button"
                android:onClick="saveAccomodationDetails"/>

            <Button
                android:id="@+id/buttonclearFieldsAccomodation"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/button_clear"
                android:onClick="clearFieldsAccomodation" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
