<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/title_accommodation_layout"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_accommodation" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/accommodation_name"
                android:src="@drawable/icon_accommodation"
                android:textColorHint="@color/colorTextInput"
                android:textColor="@android:color/white"/>/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_localization" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/accommodation_adress"
                android:src="@drawable/icon_accommodation"
                android:textColorHint="@color/colorTextInput"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_calendar" />

            <EditText
                android:id="@+id/checkInDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/date_check_ing"
                android:textColorHint="@color/colorTextInput"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_margin="10dp"
                android:src="@drawable/icon_calendar" />

            <EditText
                android:id="@+id/checkOutDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/date_check_out"
                android:textColorHint="@color/colorTextInput"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
